--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="millionaire-config.js"></script>
 <script src="standardLoad/jquery-1.11.0.min.js"></script>
 <script src="standardLoad/jquery-migrate-1.2.1.min.js"></script>
+<script src="standardLoad/Chart.js"></script>
 <script src="standardLoad/ptotemy-game-adaptor.js"></script>
 <script src="modules/quiz/question-bank.js"></script>
 <script src="modules/quiz/quiz.js"></script>
