need to test integration

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
 
 <!-- Scripts -->
-<script src="millionaire-config.js"></script>
 <script src="standardLoad/jquery-1.11.0.min.js"></script>
 <script src="standardLoad/jquery-migrate-1.2.1.min.js"></script>
 <script src="standardLoad/Chart.js"></script>
 <script src="standardLoad/ptotemy-game-adaptor.js"></script>
+<script src="integration.js"></script>
+<script src="millionaire-config.js"></script>
 <script src="modules/quiz/question-bank.js"></script>
 <script src="modules/quiz/quiz.js"></script>
 <script src="millionaire.js"></script>
